/*
 * Copyright (c) 2025 - 2026, The casual project. All rights reserved.
 *
 * This software is licensed under the MIT license, https://opensource.org/licenses/MIT
 */

//-*- coding: utf-8 -*-
buildscript {
    repositories {
        mavenCentral()
        maven { url 'https://repo.spring.io/plugins-release' }
    }
}

plugins {
    id "org.sonarqube" version "7.2.3.7755"
    id "com.github.spotbugs" version "6.5.4"
    id "com.diffplug.spotless" version "8.7.0"
}

sonar {
    properties {
        properties["sonar.host.url"] = 'http://localhost:9000'
        properties["sonar.verbose"] = "true"
        properties['sonar.java.source'] = 17
    }
}

apply from: 'testsourcesets.gradle'

defaultTasks 'build'

allprojects{
  tasks.withType(JavaCompile) { 
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
    options.compilerArgs << "-Xlint:all" << "-Werror"
  }
  repositories {
      maven {
          name = 'Central Portal Snapshots'
          url = 'https://central.sonatype.com/repository/maven-snapshots/'

          // Only search this repository for the specific dependency group
          content {
              includeGroup("se.laz.casual")
          }
      }
      mavenCentral()
  } 
}

subprojects{
  apply plugin: 'jacoco'
  apply from: "$rootProject.projectDir/versions.gradle"
  apply plugin: 'java-library'
  apply from: "$rootProject.projectDir/publish.gradle"

  apply from: "$rootProject.projectDir/staticAnalysis.gradle"

  test {
      finalizedBy jacocoTestReport
      jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED', '--add-opens=java.base/java.util=ALL-UNNAMED'
  }

  jacocoTestReport {
    reports {
      xml.required = true
      csv.required = false
    }
  }
}
